--- a/formulario.html
+++ b/formulario.html
@@ -8,7 +8,7 @@
         content="Casa & Cia Construções - Transformando sonhos em realidade desde 2023. Oferecemos serviços de qualidade, segurança e profissionalismo para suas necessidades de construção.">
     <meta name="keywords" content="construção, qualidade, segurança, profissionalismo, obras, Casa & Cia Construções">
     <link rel="stylesheet" href="css/style.css">
-    <title>Galeria</title>
+    <title>Formulário</title>
 </head>
 
 <body>
@@ -27,30 +27,10 @@
             </div>
         </section>
     </header>
-    <main class="container">
-        <section class="titulo">
-            <div class="texto-com-linhas">
-                <div class="linha-esquerda"></div>
-                <span>
-                    <h2>Galeria</h2>
-                </span>
-                <div class="linha-direita"></div>
-            </div>
-            <p>Confira nosso trabalho com a dedicação e carinho posto em cada um deles</p>
-        </section>
-        <section>
-            <section>
-                <article>
-                    <img src="images/galeria1.jpg" alt="galeria1" width="350">
-                    <img src="images/galeria2.jpg" alt="galeria2" width="350">
-                    <img src="images/galeria3.jpg" alt="galeria3" width="350">
-                    <img src="images/galeria4.jpg" alt="galeria4" width="350">
-                    <img src="images/galeria5.jpg" alt="galeria5" width="350">
-                    <img src="images/galeria6.jpg" alt="galeria6" width="350">
-                    <img src="images/galeria7.jpg" alt="galeria7" width="350">
-                    <img src="images/galeria8.jpg" alt="galeria8" width="350">
-                </article>
-            </section>
+    <section>
+        <h1>Sua mensagem foi enviada com sucesso!</h1>
+        <a href="index.html"><button type="button">Retornar para o incício</button></a>
+    </section>
 </body>
 
 </html>
