--- a/galeria.html
+++ b/galeria.html
@@ -22,7 +22,7 @@
             <div class="texto-outdoor">
                 <h1>Casa & Cia Construções</h1>
                 <h3 class="subtitle">Transformando sonhos em realidade desde 2023</h3>
-                <a href="#"><button type="button" id="button-orcamento">Solicite um orçamento</button></a>
+                <a href="contato.html"><button type="button" id="button-orcamento">Solicite um orçamento</button></a>
             </div>
         </section>
     </header>
